--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,14 @@
-
 cmake_minimum_required( VERSION 3.0 )
+project( Keypoints-Detection-and-Matching )
 
+# 添加c++ 11标准支持
+set( CMAKE_CXX_FLAGS "-std=c++11" )
 
-project( Keypoint Detection and Matching )
+# 寻找OpenCV库
+find_package( OpenCV 3 REQUIRED )
+# 添加头文件
+include_directories( ${OpenCV_INCLUDE_DIRS} )
 
-
-set( CMAKE_BUILD_TYPE "Debug" )
-
-
-add_executable( Keypoint_Detection_Matching main.cpp )
-
-
-
-
+add_executable( test main.cpp )
+# 链接OpenCV库
+target_link_libraries( test ${OpenCV_LIBS} )
